<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/my_github_r_sum"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/txt_title" />


    <EditText
        android:id="@+id/edt_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:text="@string/enter_your_github_username" />

    <Button
        android:id="@+id/btn_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/generate" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

</LinearLayout>