<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    android:padding="8dp">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#673AB7"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txt_repo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                tools:text="@string/repo_name" />

            <TextView
                android:id="@+id/txt_repo_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="15sp"
                tools:text="@string/repo_desc" />

            <Button
                android:id="@+id/btn_repos_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="80dp"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/open_repo_in_browser"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>